--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <span>Software Developer/Business Analyst<a href="https://www.newton.ca/"> @Newton Connectivity Systems</a>   (Jan'20 - May'20)</span>
 	  <span>Former Staff Accountant<a href="https://www.krp.ca/"> @KRP </a>   (Jan'19 - Apr'19)</span>
 	  <br/>      
-    <span>Bachelor of Computer Science - Software Engineering<a href="https://cs.uwaterloo.ca/"> @UWaterloo</a> Aug'22</span>
-	<span>Bachelor of Business Administration - Finance<a href="https://www.wlu.ca/programs/business-and-economics/undergraduate/business-administration-bba/"> @Laurier</a> Aug'22</span>
+    <span>Honours Bachelor of Computer Science - Software Engineering<a href="https://cs.uwaterloo.ca/"> @UWaterloo</a> Aug'22</span>
+	<span>Honours Bachelor of Business Administration - Finance<a href="https://www.wlu.ca/programs/business-and-economics/undergraduate/business-administration-bba/"> @Laurier</a> Aug'22</span>
 	<br/>
     <span><a href="mailto:a25haque@edu.uwaterloo.ca">Email</a>  -  <a href="https://www.linkedin.com/in/aliful14/">Linkedin</a>  -  <a href="https://github.com/aliful14">Github</a>  -  <a href="resume.pdf">Resume</a></span>
     </div>
