--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <span>Honours Bachelor of Computer Science - Software Engineering<a href="https://cs.uwaterloo.ca/"> @UWaterloo</a> Aug'22</span>
 	<span>Honours Bachelor of Business Administration - Finance<a href="https://www.wlu.ca/programs/business-and-economics/undergraduate/business-administration-bba/"> @Laurier</a> Aug'22</span>
 	<br/>
-    <span><a href="mailto:a25haque@edu.uwaterloo.ca">Email</a>  -  <a href="https://www.linkedin.com/in/aliful14/">LinkedIn</a>  -  <a href="https://github.com/aliful14">Github</a>  -  <a href="Resume.pdf">Resume</a></span>
+    <span><a href="mailto:a25haque@edu.uwaterloo.ca">Email</a>  -  <a href="https://www.linkedin.com/in/aliful14/">LinkedIn</a>  -  <a href="https://github.com/aliful14">Github</a>  -  <a href="Aliful Haque Resume.pdf">Resume</a></span>
     </div>
     
 
